secondary commit